--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -20,7 +20,7 @@
     display: flex;
   }
 
-  .top-container {
+  .page-header {
     display: flex;
     justify-content: space-between;
     width: 100%;
