--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -73,6 +73,10 @@
   position: relative;
   display: flex;
 
+  svg {
+    stroke: currentcolor;
+  }
+
   &::before {
     content: '';
     position: absolute;
