--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -40,4 +40,4 @@ $color-overlay: rgb($color-black, 0.6);
 $color-error: $color-danger;
 $color-success: $color-blue-dark;
 $color-info: $color-blue;
-$color-warning: $color-blue;
+$color-warning: #fec901;
