color variables for icons

--- a/src/scss/variables.module.scss
+++ b/src/scss/variables.module.scss
@@ -9,4 +9,8 @@
   paddingBlockSmall: $padding-block-small;
   paddingBlockMedium: $padding-block-medium;
   paddingBlockLarge: $padding-block-large;
+  colorSuccess: $color-success;
+  colorInfo: $color-info;
+  colorWarning: $color-warning;
+  colorError: $color-error;
 }
