--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -12,9 +12,8 @@ $color-gray-20: #fbfbf9;
 $color-gray-30: #a7a6ba;
 $color-gray-40: #f9f9f9;
 $color-gray-50: #92aebb;
+$color-gray-55: #dbe0dc;
 $color-gray-60: #c086a6;
-
-// New
 $color-gray-2: #fbfbf9;
 $color-gray-6: #a7a6ba;
 $color-gray-12: #66606d;
