--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -91,7 +91,7 @@ a[class^='btn-'],
 }
 
 .btn-danger {
-  background-color: $color-red-light;
+  background-color: #660d44;
   color: #fff;
 
   &:hover {
