--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -71,6 +71,13 @@ h1 {
 a {
   text-decoration: none;
   position: relative;
+  color: #717579;
+
+  @include transition;
+
+  &:hover {
+    color: #99a4a9;
+  }
 
   &::after {
     position: absolute;
