overflow for page card

--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -33,6 +33,8 @@
   }
 
   .page-card {
+    max-height: 78lvh;
+    overflow: auto;
     background: #fff;
     border-radius: 4px;
     box-shadow: $box-shadow;
