--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -4,7 +4,7 @@
   max-width: fit-content;
   border-radius: 50px;
   background-color: #2c566d;
-  color: #fff;
+  color: $color-white;
   display: flex;
   padding: 2px 12px;
   align-items: center;
