--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -9,7 +9,7 @@
 .tooltip-content {
   position: absolute;
   z-index: 1;
-  background: #fff;
+  background: $color-white;
   color: #473f4a;
   padding: 8px;
   box-shadow: $box-shadow;
