--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -60,7 +60,7 @@
       &:hover,
       &.active {
         background-color: #66606d;
-        color: #fff;
+        color: $color-white;
         border: 0;
       }
     }
