--- a/src/components/categoryCard/_category-card.scss
+++ b/src/components/categoryCard/_category-card.scss
@@ -32,7 +32,7 @@
   }
 
   .category-card {
-    background-color: #fff;
+    background-color: $color-white;
     flex: 1;
     padding-top: 40px;
 
