--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -1,7 +1,6 @@
 $color-white: #fff;
 $color-black: #000;
-$color-blue: #0b6b7c;
-$color-blue-dark: #04515f;
+$color-blue: #2c566d;
 $color-red: #d20917;
 
 // Gray colors
@@ -13,7 +12,6 @@ $color-gray-55: #dbe0dc;
 $color-gray-2: #fbfbf9;
 
 /* colors */
-$color-primary-text: $color-gray-40;
 $color-danger: $color-red;
 $color-border: #a7a6ba;
 $color-background: $color-gray-2;
@@ -21,6 +19,6 @@ $color-overlay: rgb($color-black, 0.6);
 
 // $color-mics
 $color-error: $color-danger;
-$color-success: #04515f;
+$color-success: #2c566d;
 $color-info: #4e8673;
 $color-warning: #fec901;
