--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -21,7 +21,7 @@
     z-index: 2;
     padding: 12px;
     color: $color-white;
-    background: $color-blue;
+    background-color: $color-blue;
     display: block;
   }
 
