--- a/src/components/progressbar/_progress-bar.scss
+++ b/src/components/progressbar/_progress-bar.scss
@@ -6,7 +6,7 @@
   .progress-bar {
     display: flex;
     height: 100%;
-    background-color: $color-blue-dark;
+    background-color: $color-blue;
 
     &.auto-animation {
       background-color: $color-border;
