--- a/src/scss/_menu-burger.scss
+++ b/src/scss/_menu-burger.scss
@@ -5,7 +5,7 @@ $burger-placement: -8px;
 .burger-basic {
   width: rem(30px);
   height: 2px;
-  background-color: $color-primary-text;
+  background-color: $color-gray-30;
   position: absolute;
 }
 
