--- a/src/scss/variables.module.scss
+++ b/src/scss/variables.module.scss
@@ -12,5 +12,5 @@
   colorSuccess: $color-success;
   colorInfo: $color-info;
   colorWarning: $color-warning;
-  colorError: $color-error;
+  colorError: $color-danger;
 }
