--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -8,7 +8,7 @@
 }
 
 .admin {
-  background-color: #f9f9f9;
+  background-color: $color-background;
   padding-left: 40px;
   padding-right: 40px;
   display: flex;
