--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -5,10 +5,13 @@ $color-red: #d20917;
 
 // Gray colors
 $color-gray-10: #f9f9f9;
+$color-gray-15: #f4f4f5;
 $color-gray-20: #99a4a9;
+$color-gray-90: #020101;
 
 /* colors */
 $color-border: $color-gray-20;
+$color-main: $color-gray-90;
 $color-background: $color-gray-10;
 $color-overlay: rgb($color-black, 0.6);
 
