--- a/src/components/formElements/timeInput/_time-input.scss
+++ b/src/components/formElements/timeInput/_time-input.scss
@@ -5,7 +5,7 @@
   width: 30px;
   position: absolute;
   height: 30px;
-  background-color: #f4f4f5;
+  background-color: $color-gray-15;
   z-index: 1;
   right: 0;
   top: 50%;
