--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -41,15 +41,15 @@ a[class^='btn-'],
 }
 
 .btn-primary {
-  background-color: #473f4a;
-  color: #f4f4f5;
+  background-color: $color-main;
+  color: $color-gray-15;
 
   &:hover {
-    background-color: #020101;
+    background-color: $color-gray-90;
   }
 
   &:focus-visible {
-    @include outline(#473f4a);
+    @include outline($color-main);
 
     border: 1px solid $color-white;
   }
@@ -57,8 +57,8 @@ a[class^='btn-'],
 
 .btn-secondary {
   background-color: transparent;
-  color: #2a3439;
-  border: 1px solid #473f4a;
+  color: $color-main;
+  border: 1px solid $color-main;
 
   &:hover {
     color: #b5b5ba;
@@ -101,7 +101,7 @@ a[class^='btn-'],
 
 .btn-ghost {
   background-color: transparent;
-  color: #2a3439;
+  color: $color-main;
   border: 0;
   width: fit-content;
   min-height: auto;
