--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -28,7 +28,7 @@
       display: flex;
       margin-right: 30px;
       width: 80%;
-      border-bottom: 3px solid #c086a6;
+      border-bottom: 2px solid $color-red-20;
       border-radius: 4px;
     }
   }
