--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -1,7 +1,12 @@
 $color-white: #fff;
 $color-black: #000;
-$color-blue: #2c566d;
 $color-red: #d20917;
+
+// Blue colors
+$color-blue: #2c566d;
+$color-blue-20: #dce4e7;
+$color-blue-25: #94afba;
+$color-blue-30: #2f6d8f;
 
 // Red colors
 $color-red-10: #a0738f;
@@ -11,8 +16,12 @@ $color-red-20: #793e5f;
 $color-gray-10: #f9f9f9;
 $color-gray-15: #f4f4f5;
 $color-gray-18: #e5e5e5;
+$color-gray-19: #d9d6d6;
 $color-gray-20: #99a4a9;
+$color-gray-21: #dbe0dc;
+$color-gray-22: #f7f7f7;
 $color-gray-50: #66606d;
+$color-gray-60: #1e211d;
 $color-gray-90: #020101;
 
 /* colors */
