--- a/src/components/categoryCard/_category-card.scss
+++ b/src/components/categoryCard/_category-card.scss
@@ -56,7 +56,7 @@
       display: flex;
       height: 4px;
       width: 100%;
-      background-color: #1e211d;
+      background-color: $color-gray-60;
     }
   }
 
@@ -65,7 +65,7 @@
   }
 
   .card-right {
-    background-color: #dbe0dc;
+    background-color: $color-gray-21;
     max-width: rem(400px);
 
     .card-top-line {
