--- a/src/components/datePicker/_date-picker.scss
+++ b/src/components/datePicker/_date-picker.scss
@@ -12,13 +12,13 @@
   }
 
   .rdp-month {
-    border: 1px solid #463f4a;
+    border: 1px solid $color-gray-50;
   }
 
   .rdp-today {
     button {
-      color: #463f4a;
-      border: 2px solid #463f4a;
+      color: $color-gray-50;
+      border: 2px solid $color-gray-50;
       border-radius: 4px;
     }
   }
@@ -27,7 +27,7 @@
     padding: 10px;
     font-size: 16px;
     font-weight: normal;
-    border-bottom: 1px solid #463f4a;
+    border-bottom: 1px solid $color-gray-50;
   }
 
   .rdp-weekday {
@@ -41,13 +41,13 @@
     &:focus-visible {
       outline: transparent;
       color: $color-gray-15;
-      background-color: #463f4a;
+      background-color: $color-gray-50;
     }
   }
 
   .rdp-selected .rdp-day_button {
     border: 0;
-    background-color: #463f4a;
+    background-color: $color-gray-50;
     color: $color-gray-15;
     font-weight: normal;
   }
