--- a/src/components/formElements/radioButton/_radio-button.scss
+++ b/src/components/formElements/radioButton/_radio-button.scss
@@ -67,7 +67,7 @@ input[type='radio'] {
     }
 
     &:checked {
-      background-color: #2f6d8f;
+      background-color: $color-blue-30;
       border: 0;
     }
   }
