--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -10,7 +10,7 @@
 
     &:hover,
     &.active {
-      color: #66606d;
+      color: $color-gray-50;
       padding-bottom: 4px;
       border-bottom: 2px solid currentcolor;
     }
@@ -32,7 +32,7 @@
   .btn-ghost {
     position: absolute;
     z-index: 3;
-    background: #d9d6d6;
+    background-color: $color-gray-19;
     height: 60px;
     padding: 2px;
     top: 50%;
@@ -57,7 +57,7 @@
 
       &:hover,
       &.active {
-        background-color: #66606d;
+        background-color: $color-gray-50;
         color: $color-white;
         border: 0;
       }
