background => background-color

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -3,7 +3,7 @@
 .dropdown-content {
   position: absolute;
   z-index: 1;
-  background: $color-white;
+  background-color: $color-white;
   padding: 8px;
   box-shadow: $box-shadow;
   border-radius: 4px;
