--- a/src/components/formElements/password/_password-input.scss
+++ b/src/components/formElements/password/_password-input.scss
@@ -26,7 +26,7 @@
 .password-popup-container {
   position: absolute;
   top: -178px;
-  background: $color-white;
+  background-color: $color-white;
   z-index: 2;
   box-shadow: $box-shadow;
   border-radius: 4px;
