--- a/src/components/loader/_loader.scss
+++ b/src/components/loader/_loader.scss
@@ -3,7 +3,7 @@
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  background: conic-gradient(#0000 10%, #706f6f);
+  background-color: conic-gradient(#0000 10%, #706f6f);
   mask: radial-gradient(farthest-side, #0000 calc(100% - 1.8px), #000 0);
   animation: spinner 1s infinite linear;
 }
