--- a/src/components/dropdownBtn/_dropdown-btn.scss
+++ b/src/components/dropdownBtn/_dropdown-btn.scss
@@ -5,7 +5,7 @@
 }
 
 .dropdown-list {
-  background: $color-white;
+  background-color: $color-white;
   display: flex;
   flex-direction: column;
   position: absolute;
