--- a/src/components/messagePopup/_message-popup.scss
+++ b/src/components/messagePopup/_message-popup.scss
@@ -43,7 +43,7 @@
 .message-popup-item {
   min-width: rem(300px);
   border-left: 12px solid $color-success;
-  background: $color-white;
+  background-color: $color-white;
   box-shadow: $box-shadow;
   border-radius: 6px;
   padding: 16px 8px;
