--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -35,7 +35,7 @@
   .page-card {
     max-height: 78lvh;
     overflow: auto;
-    background: $color-white;
+    background-color: $color-white;
     border-radius: 4px;
     box-shadow: $box-shadow;
     margin-bottom: 12px;
