--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -6,7 +6,7 @@
   .file-input-info {
     position: absolute;
     top: 12px;
-    max-width: 294px;
+    max-width: rem(495px);
     left: 128px;
   }
 
