--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -10,6 +10,7 @@ $color-blue-30: #2f6d8f;
 
 // Red colors
 $color-red-10: #a0738f;
+$color-red-15: #88001b;
 $color-red-20: #793e5f;
 
 // Gray colors
@@ -31,7 +32,7 @@ $color-background: $color-gray-10;
 $color-overlay: rgb($color-black, 0.6);
 
 // Message popup colors
-$color-danger: $color-red;
+$color-danger: $color-red-15;
 $color-success: $color-blue;
 $color-info: #4e8673;
 $color-warning: #fec901;
