--- a/src/components/messagePopup/_message-popup.scss
+++ b/src/components/messagePopup/_message-popup.scss
@@ -67,9 +67,8 @@
 
   .btn-ghost {
     position: absolute;
-    right: 0;
-    top: -8px;
-    padding: 12px;
+    right: 6px;
+    top: 4px;
 
     svg {
       width: rem(12px);
