--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -14,6 +14,7 @@ $color-red-15: #88001b;
 $color-red-20: #793e5f;
 
 // Gray colors
+$color-gray-5: #fdfefe;
 $color-gray-10: #f9f9f9;
 $color-gray-15: #f4f4f5;
 $color-gray-18: #e5e5e5;
