--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -3,7 +3,7 @@
 button[aria-disabled='true'] {
   pointer-events: none;
   background-color: $color-background;
-  color: $color-gray-10;
+  color: $color-gray-5;
   border-color: $color-border;
 }
 
@@ -56,14 +56,14 @@ a[class^='btn-'],
 }
 
 .btn-secondary {
-  background-color: $color-gray-10;
+  background-color: $color-white;
   color: $color-main;
   border: 1px solid $color-border;
 
   &:hover {
-    color: $color-gray-10;
+    color: $color-gray-5;
     background-color: $color-border;
-    border: 1px solid $color-gray-10;
+    border: 1px solid $color-gray-5;
   }
 
   &:focus-visible {
