--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -3,7 +3,7 @@
 button[aria-disabled='true'] {
   pointer-events: none;
   background-color: $color-background;
-  color: $color-gray-5;
+  color: $color-light-gray-10;
   border-color: $color-border;
 }
 
@@ -61,9 +61,9 @@ a[class^='btn-'],
   border: 1px solid $color-border;
 
   &:hover {
-    color: $color-gray-5;
+    color: $color-light-gray-10;
     background-color: $color-border;
-    border: 1px solid $color-gray-5;
+    border: 1px solid $color-light-gray-10;
   }
 
   &:focus-visible {
