--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -25,7 +25,7 @@ $color-gray-90: #020101;
 // Light gray colors
 $color-light-gray-10: #fdfefe;
 $color-light-gray-20: #f9f9f9;
-$color-gray-15: #f4f4f5;
+$color-light-gray-30: #f4f4f5;
 
 /* colors */
 $color-border: $color-gray-30;
