--- a/src/scss/globals/_extended-classnames.scss
+++ b/src/scss/globals/_extended-classnames.scss
@@ -3,7 +3,7 @@
 @use './fonts' as *;
 
 %styled-input {
-  background-color: $color-gray-15;
+  background-color: $color-light-gray-30;
   border: 0;
   min-height: rem(68px);
   border-radius: 4px;
