--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -2,8 +2,8 @@
 
 button[aria-disabled='true'] {
   pointer-events: none;
-  background-color: $color-background;
-  color: $color-light-gray-10;
+  background-color: $color-light-gray-30;
+  color: $color-gray-60;
   border-color: $color-border;
 }
 
