--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -14,6 +14,10 @@ dialog {
   flex-direction: column;
   z-index: 10;
 
+  &.animate-top-center {
+    top: 30%;
+  }
+
   @include max-size($small) {
     border-radius: 0;
     position: fixed;
