--- a/src/components/datePicker/_date-picker.scss
+++ b/src/components/datePicker/_date-picker.scss
@@ -40,7 +40,7 @@
 
     &:focus-visible {
       outline: transparent;
-      color: $color-light-gray-30;
+      color: $color-secondary;
       background-color: $color-gray-70;
     }
   }
@@ -48,7 +48,7 @@
   .rdp-selected .rdp-day_button {
     border: 0;
     background-color: $color-gray-70;
-    color: $color-light-gray-30;
+    color: $color-secondary;
     font-weight: normal;
   }
 
