--- a/src/components/formElements/timeInput/_time-input.scss
+++ b/src/components/formElements/timeInput/_time-input.scss
@@ -5,7 +5,7 @@
   width: 30px;
   height: 30px;
   position: absolute;
-  background-color: $color-light-gray-30;
+  background-color: $color-secondary;
   z-index: 1;
   right: 0;
   top: 50%;
