--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -10,7 +10,7 @@
   position: absolute;
   z-index: 1;
   background-color: $color-white;
-  color: $color-main;
+  color: $color-primary;
   padding: 8px;
   box-shadow: $box-shadow;
   border-radius: 4px;
