--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -28,7 +28,7 @@ $color-light-gray-30: #f4f4f5;
 
 /* colors */
 $color-border: $color-gray-30;
-$color-main: $color-gray-90;
+$color-primary: $color-gray-90;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
 $color-overlay: rgb($color-black, 0.6);
