--- a/src/scss/globals/_extended-classnames.scss
+++ b/src/scss/globals/_extended-classnames.scss
@@ -7,7 +7,7 @@
   border: 0;
   min-height: rem(68px);
   border-radius: 4px;
-  color: $color-main;
+  color: $color-primary;
   outline: transparent;
   font-family: $font-primary;
 
