--- a/src/components/selectbox/_select-box.scss
+++ b/src/components/selectbox/_select-box.scss
@@ -31,7 +31,7 @@
   }
 
   .select-box__single-value {
-    color: $color-main;
+    color: $color-primary;
   }
 
   .select-box__option--is-selected {
