--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -26,6 +26,10 @@ table {
     display: flex;
     justify-content: space-between;
 
+    .checkbox-radio-container {
+      margin: 0;
+    }
+
     .input-container {
       width: auto;
     }
