--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,5 +1,18 @@
 @use './globals' as *;
 
+.btn-primary::before {
+  opacity: 0;
+  background: $color-secondary;
+  color: $color-primary;
+  transform: scale(0.1, 1);
+}
+
+.btn-primary:focus-visible::before,
+.btn-primary:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+
 button[aria-disabled='true'] {
   pointer-events: none;
   background-color: $color-secondary;
@@ -20,10 +33,11 @@ a[class^='btn-'],
   padding: 16px;
   border-radius: 4px;
   width: 100%;
-  border: 1px solid currentcolor;
+  border: 0;
   cursor: pointer;
   min-height: rem(60px);
   letter-spacing: rem(0.5px);
+  overflow: hidden;
 
   @include transition;
 
@@ -32,6 +46,23 @@ a[class^='btn-'],
     position: absolute;
     inset: -10px;
   }
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    @include transition;
+  }
+}
+
+.button-text {
+  position: relative;
+  z-index: 2;
 }
 
 .text-ellipsis {
@@ -44,18 +75,6 @@ a[class^='btn-'],
 .btn-primary {
   background-color: $color-primary;
   color: $color-secondary;
-
-  &:hover {
-    color: $color-primary;
-    background-color: $color-white;
-    border-color: $color-primary;
-  }
-
-  &:focus-visible {
-    @include outline($color-primary);
-
-    border: 1px solid $color-white;
-  }
 }
 
 // Secondary button
@@ -67,12 +86,6 @@ a[class^='btn-'],
   &:hover {
     color: $color-light-gray-10;
     background-color: $color-gray-70;
-  }
-
-  &:focus-visible {
-    @include outline(currentColor);
-
-    border: 1px solid $color-white;
   }
 }
 
@@ -93,6 +106,13 @@ a[class^='btn-'],
     @include outline(currentColor);
 
     border: 1px solid $color-white;
+  }
+}
+
+a.btn {
+  &:focus-visible,
+  &:hover {
+    color: $color-primary;
   }
 }
 
