--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,18 +1,5 @@
 @use './globals' as *;
 
-.btn-primary::before {
-  opacity: 0;
-  background: $color-secondary;
-  color: $color-primary;
-  transform: scale(0.1, 1);
-}
-
-.btn-primary:focus-visible::before,
-.btn-primary:hover::before {
-  opacity: 1;
-  transform: scale(1, 1);
-}
-
 button[aria-disabled='true'] {
   pointer-events: none;
   background-color: $color-secondary;
@@ -55,8 +42,16 @@ a[class^='btn-'],
     width: 100%;
     height: 100%;
     z-index: 1;
+    opacity: 0;
+    transform: scale(0.1, 1);
 
     @include transition;
+  }
+
+  &:focus-visible::before,
+  &:hover::before {
+    opacity: 1;
+    transform: scale(1, 1);
   }
 }
 
@@ -75,6 +70,17 @@ a[class^='btn-'],
 .btn-primary {
   background-color: $color-primary;
   color: $color-secondary;
+
+  &:focus-visible,
+  &:hover {
+    color: $color-primary;
+    border-radius: 0;
+  }
+
+  &::before {
+    background: $color-secondary;
+    color: $color-primary;
+  }
 }
 
 // Secondary button
@@ -113,6 +119,7 @@ a.btn {
   &:focus-visible,
   &:hover {
     color: $color-primary;
+    border-radius: 0;
   }
 }
 
