--- a/src/components/formElements/checkbox/_checkbox.scss
+++ b/src/components/formElements/checkbox/_checkbox.scss
@@ -3,8 +3,8 @@
 input[type='checkbox'] {
   &:checked {
     outline: transparent;
-    border-color: $color-blue;
-    background-color: $color-blue;
+    border-color: $color-blue-30;
+    background-color: $color-blue-30;
 
     &::before {
       content: '';
