--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -2,7 +2,6 @@ $color-white: #fff;
 $color-black: #000;
 
 // Blue colors
-$color-blue: #2c566d;
 $color-blue-20: #dce4e7;
 $color-blue-25: #94afba;
 $color-blue-30: #2f6d8f;
@@ -35,11 +34,11 @@ $color-overlay: rgb($color-black, 0.6);
 
 // Message popup colors
 $color-danger: $color-red-20;
-$color-success: $color-blue;
+$color-success: $color-blue-30;
 $color-info: #4e8673;
 $color-warning: #fec901;
 
 // Badge colors
 $color-badge-scheduled: $color-gray-60;
 $color-badge-inactive: $color-red-10;
-$color-badge-default: $color-blue;
+$color-badge-default: $color-blue-30;
