--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -27,9 +27,11 @@ $color-light-gray-30: #f4f4f5;
 
 /* colors */
 $color-border: $color-gray-30;
+$color-border-secondary: $color-blue-30;
 $color-primary: $color-gray-90;
 $color-secondary: $color-light-gray-30;
 $color-background: $color-light-gray-20;
+$color-background-secondary: $color-blue-30;
 $color-overlay: rgb($color-black, 0.6);
 
 // Message popup colors
