--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -21,7 +21,7 @@
     z-index: 2;
     padding: 12px;
     color: $color-white;
-    background-color: $color-blue-30;
+    background-color: $color-background-secondary;
     display: block;
   }
 
