--- a/src/components/skipLinks/_skip-links.scss
+++ b/src/components/skipLinks/_skip-links.scss
@@ -7,7 +7,7 @@
   opacity: 0;
   transition: opacity 0.5s ease;
   border-radius: 4px;
-  background-color: $color-blue-30;
+  background-color: $color-background-secondary;
   color: $color-white;
   top: -20px;
 
