button-text => btn-text

--- a/src/components/dropdownBtn/_dropdown-btn.scss
+++ b/src/components/dropdownBtn/_dropdown-btn.scss
@@ -33,7 +33,7 @@
       background-color: $color-background;
     }
 
-    .button-text {
+    .btn-text {
       display: flex;
       gap: 8px;
       width: 100%;
