--- a/src/components/sortTable/_table.scss
+++ b/src/components/sortTable/_table.scss
@@ -64,7 +64,7 @@ table {
       font-size: 14px;
     }
 
-    .button-text {
+    .btn-text {
       display: flex;
       gap: 4px;
       align-items: center;
