--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -30,6 +30,12 @@
     h1 {
       margin: 0;
     }
+
+    a {
+      &:focus-visible {
+        @include outline;
+      }
+    }
   }
 
   .page-card {
@@ -73,6 +79,8 @@
 
       .nav-text {
         opacity: 0;
+        width: 0;
+        overflow: hidden;
       }
     }
   }
