main nav outline

--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -8,6 +8,10 @@
     text-transform: uppercase;
     padding: 8px;
 
+    &:focus-visible {
+      @include outline;
+    }
+
     &:hover,
     &.active {
       color: $color-gray-70;
