--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -115,6 +115,10 @@ ul {
   gap: 8px;
   align-items: center;
 
+  &:focus-visible {
+    @include outline(currentcolor);
+  }
+
   &:hover {
     gap: 12px;
     color: currentcolor;
