--- a/src/components/skeleton/_skeleton.scss
+++ b/src/components/skeleton/_skeleton.scss
@@ -25,6 +25,13 @@
   );
 }
 
+.skeleton-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
 @keyframes skeleton-animation {
   0% {
     opacity: 0.1;
