--- a/src/scss/_error.scss
+++ b/src/scss/_error.scss
@@ -5,6 +5,7 @@
   gap: 24px;
   align-items: center;
   color: currentcolor;
+  flex-direction: column;
 
   .btn-secondary {
     color: currentcolor;
@@ -17,11 +18,6 @@
   &.error-boundary {
     .emoji {
       max-width: rem(120px);
-    }
-
-    .error-info {
-      font-size: rem(14px);
-      font-weight: normal;
     }
   }
 }
