--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -43,8 +43,7 @@
   }
 
   .page-card {
-    height: 100%;
-    max-height: rem(380px);
+    max-height: 78lvh;
     overflow: auto;
     background-color: $color-white;
     border-radius: 4px;
@@ -52,7 +51,7 @@
     margin-bottom: 12px;
     width: 100%;
     padding: 24px;
-    padding-top: 40px;
+    padding-top: 32px;
   }
 
   .container {
