--- a/src/scss/globals/_fonts.scss
+++ b/src/scss/globals/_fonts.scss
@@ -18,5 +18,16 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: outfit-medium;
+  src:
+    url('/fonts/Outfit-Medium.woff2') format('woff2'),
+    url('/fonts/Outfit-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 $font-primary: outfit, sans-serif;
+$font-primary-bold: outfit-medium, sans-serif;
 $font-secondary: felix, sans-serif;
