--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -57,10 +57,6 @@
   }
 }
 
-.admin-card-text {
-  margin-bottom: 8px;
-}
-
 .card-right {
   background-color: $color-gray-20;
   max-width: rem(400px);
@@ -82,5 +78,6 @@
   .btn {
     max-width: fit-content;
     padding: 0 32px;
+    margin-top: 8px;
   }
 }
