--- a/src/pages/product/_product-page.scss
+++ b/src/pages/product/_product-page.scss
@@ -5,3 +5,29 @@
   gap: 8px;
   align-items: center;
 }
+
+.product-list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.product-size-list {
+  display: flex;
+  gap: 8px;
+
+  .product-size-list-item {
+    background-color: $color-secondary;
+    height: rem(40px);
+    width: rem(40px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    color: $color-gray-40;
+
+    &.available {
+      color: $color-primary;
+    }
+  }
+}
