--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -18,6 +18,13 @@
   .btn {
     min-height: rem(30px);
   }
+
+  .separator {
+    height: 100px;
+    width: 1px;
+    position: absolute;
+    top: 30%;
+  }
 }
 
 .admin-card-title {
@@ -34,16 +41,37 @@
   padding-top: 42px;
 
   .admin-card-content {
+    height: 100%;
     min-height: rem(300px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 12px 30px;
+    position: relative;
+
+    img {
+      max-width: rem(500px);
+    }
   }
 
   &.card-right {
     padding-right: 12px;
     padding-top: 40px;
+  }
+
+  &.card-left {
+    flex: 2;
+  }
+
+  &.card-center {
+    .product-list-container {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      padding-left: 30px;
+      justify-content: center;
+      height: 100%;
+    }
   }
 
   .card-top-line {
