--- a/src/scss/_helper_classes.scss
+++ b/src/scss/_helper_classes.scss
@@ -94,3 +94,10 @@
   justify-content: space-between;
   gap: 24px;
 }
+
+.separator {
+  width: 100%;
+  height: 1px;
+  display: flex;
+  background-color: $color-gray-80;
+}
