--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -1,6 +1,6 @@
 @use './globals' as *;
 
-.card-container {
+.admin-card-container {
   display: flex;
   margin-block: 30px;
 
@@ -25,20 +25,31 @@
     position: absolute;
     top: 30%;
   }
-}
 
-.admin-card-title {
-  margin: 0;
-}
+  .admin-card-title {
+    margin: 0;
+  }
 
-.category-date {
-  font-style: italic;
+  .admin-card-date {
+    font-style: italic;
+  }
 }
 
 .admin-card {
   background-color: $color-white;
   flex: 1;
   padding-top: 42px;
+
+  .card-top-line {
+    display: flex;
+    height: 4px;
+    width: 100%;
+    background-color: $color-gray-80;
+  }
+
+  img {
+    max-width: rem(500px);
+  }
 
   .admin-card-content {
     height: 100%;
@@ -48,15 +59,6 @@
     justify-content: space-between;
     padding: 12px 30px;
     position: relative;
-
-    img {
-      max-width: rem(500px);
-    }
-  }
-
-  &.card-right {
-    padding-right: 12px;
-    padding-top: 40px;
   }
 
   &.card-left {
@@ -74,35 +76,30 @@
     }
   }
 
-  .card-top-line {
-    display: flex;
-    height: 4px;
-    width: 100%;
-    background-color: $color-gray-80;
-  }
-}
+  &.card-right {
+    background-color: $color-gray-20;
+    max-width: rem(400px);
+    padding-right: 12px;
+    padding-top: 40px;
 
-.card-right {
-  background-color: $color-gray-20;
-  max-width: rem(400px);
+    .card-top-line {
+      height: 6px;
+    }
 
-  .card-top-line {
-    height: 6px;
-  }
+    .admin-card-date {
+      text-align: right;
+    }
 
-  .category-date {
-    text-align: right;
-  }
+    .admin-card-title {
+      display: flex;
+      justify-content: flex-end;
+      font-size: rem(18px);
+    }
 
-  .admin-card-title {
-    display: flex;
-    justify-content: flex-end;
-    font-size: rem(18px);
-  }
-
-  .btn {
-    max-width: fit-content;
-    padding: 0 32px;
-    margin-top: 8px;
+    .btn {
+      max-width: fit-content;
+      padding: 0 32px;
+      margin-top: 8px;
+    }
   }
 }
