--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -81,4 +81,10 @@ dialog {
     align-items: center;
     justify-content: center;
   }
+
+  .btn-close {
+    position: absolute;
+    right: 9px;
+    top: 12px;
+  }
 }
