--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -1,38 +1,41 @@
 @use '../../../scss/globals' as *;
 
 .file-container {
+  .file-upload-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+}
+
+.preview-container {
+  display: flex;
+  border: 1px solid $color-border;
+  gap: 12px;
   position: relative;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
+  margin-bottom: 8px;
 
-  .file-input-info {
+  .preview-img {
+    width: rem(92px);
+    height: rem(92px);
+    object-fit: cover;
+  }
+
+  .preview-info {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .preview-size {
+    color: $color-gray-60;
+  }
+
+  .btn-ghost {
     position: absolute;
-    top: 12px;
-    max-width: rem(495px);
-    left: 128px;
-  }
-
-  .input-container {
-    overflow: hidden;
-    border-radius: 4px;
-    border: 1px solid $color-border;
-  }
-
-  .form-label-container {
-    position: absolute;
-    z-index: 2;
-    padding: 12px;
-    color: $color-white;
-    background-color: $color-background-secondary;
-    display: block;
-  }
-
-  .form-label {
-    margin: 0;
-    cursor: pointer;
-  }
-
-  input[type='file'] {
-    opacity: 0;
-    max-height: rem(37px);
-    cursor: pointer;
+    right: 16px;
   }
 }
