--- a/src/components/formElements/fileInput/_file-input.scss
+++ b/src/components/formElements/fileInput/_file-input.scss
@@ -18,8 +18,10 @@
   display: flex;
   flex-direction: column;
   flex: 2;
+  gap: 8px;
 
   .preview-item {
+    display: flex;
     border: 1px solid $color-border;
     gap: 12px;
     position: relative;
