--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -8,10 +8,12 @@
   flex-direction: column;
   gap: 20px;
   margin: 0;
+  width: 100%;
 
   legend {
-    position: absolute;
-    top: 20px;
-    left: 0;
+    font-family: $font-primary-bold;
+    font-size: rem(16px);
+    padding: 0;
+    margin-bottom: 16px;
   }
 }
