--- a/src/scss/globals/_variables.scss
+++ b/src/scss/globals/_variables.scss
@@ -6,6 +6,7 @@ $small: rem(767px);
 $medium: rem(1024px);
 $large: rem(1424px);
 $header-height: rem(74px);
+$input-height: rem(68px);
 $box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
 $padding-block-small: 4;
 $padding-block-medium: 12;
