--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -122,3 +122,10 @@ textarea {
     margin-top: 20px;
   }
 }
+
+.add-to-input {
+  .btn {
+    max-width: rem(52px);
+    height: $input-height;
+  }
+}
